0.24-dev
-revise module for transcrypt.

0.24    2021-04-28
-revise rect move/inflate args processing.
-revise rect attributes.
-revise ndarray shape for inheritance.
-add env check.
-revise quit method to stop mixer.
-revise quit method to stop timers.
-update time set_timer for event argument.
-revise app to use webkit2.
-update for python 2/3 compatibility.

0.23    2021-04-06
-update event handling.
-update surface get_at to return color object.
-refactor surface colorkey methods.
-revise sprite blit process.
-update mask for optimization.
-update ndarray and bitset for optimization.
-update time wait to properly delay callback.
-revise requestanimationframe shim.
-update clock with performance time.
-update clock tick with performance time.
-update asynchronous loop process to optimize.
-update for python 2/3 compatibility.

0.22    2019-04-06
-add display set_callback method.
-update Canvas handling of callback change.
-add time set_timer method.
-update sprite to revise member groups.
-update sprite argument handling.
-update sprite collide_mask to use mask.overlap.
-refactor rect for optimization.
-update display setup to accept callback function or object with run method.
-update rect to define __slots__.
-add mouse set_cursor and get_cursor methods.
-add surface toDataURL method.
-update mouse set_cursor to use custom image.
-update surface set_at to optimize.
-update mouse set_cursor to use cursor data.
-update transform rotozoom to optimize.
-update display update method (_update) to optimize.
-update surface blit method (_blit_clear) to optimize.
-update draw arc of nonequal dimension to process properly.
-update draw ellipse to use float scale argument.
-update draw arc to optimize.
-update asynchronous loop process to optimize.
-refactor time clock object.
-revise with absolute import statements.
-add display methods getAbsoluteLeft/getAbsoluteTop/getScrollLeft/getScrollTop.
-add touch event support.
-update font with minor rendering adjustment.