@@ -364,12 +364,6 @@ class OrderedUpdates(RenderUpdates):
         self.range = 1000
         self.index = iter(range(self.range))
         self.sort = None
-        for sprite in sprites:
-            if sprite not in self._sprites.keys():
-                spriteID = id(sprite)
-                index = next(self.index)
-                self.order[index] = spriteID
-                self.place[spriteID] = index
         RenderUpdates.__init__(self, *sprites)
 
     def __iter__(self):
@@ -400,10 +394,11 @@ class OrderedUpdates(RenderUpdates):
         Return copy of group.
         """
         newgroup = RenderUpdates.copy(self)
-        newgroup.order = self.order.copy()
-        newgroup.place = self.place.copy()
-        newgroup.range = self.range
-        newgroup.index = iter(range(max(self.order.keys())+1,self.range))
+        if len(self.sprites()) > 0:
+            newgroup.order = self.order.copy()
+            newgroup.place = self.place.copy()
+            newgroup.range = self.range
+            newgroup.index = iter(range(max(self.order.keys())+1,self.range))
         return newgroup
 
     def add(self, *sprites):
@@ -411,50 +406,55 @@ class OrderedUpdates(RenderUpdates):
         Add sprite(s) to group, maintaining order of addition.
         """
         for sprite in sprites:
-            if sprite not in self._sprites.keys():
-                index = self._get_index()
-                if index is not None:
-                    spriteID = id(sprite)
+            if hasattr(sprite, '_groups'):
+                spriteID = id(sprite)
+                if str(spriteID) not in self._sprites.keys():
+                    self._sprites[spriteID] = sprite
+                    sprite._groups[id(self)] = self
+                    index = self._get_index()
                     self.order[index] = spriteID
                     self.place[spriteID] = index
-                else:
-                    keys = list(self.order.keys())
-                    keys.sort()
-                    if len(keys)*2 > self.range:
-                        self.range = len(keys)*2
-                    self.index = iter(range(self.range))
-                    order = self.order
-                    self.order = dict()
-                    self.place = dict()
-                    for key in keys:
-                        index = next(self.index)
-                        self.order[index] = order[key]
-                        self.place[order[key]] = index
-                    index = next(self.index)
-                    spriteID = id(sprite)
-                    self.order[index] = spriteID
-                    self.place[spriteID] = index
+            else:
+                self.add(*sprite)
         self.sort = None
-        RenderUpdates.add(self, *sprites)
         return None
 
     def _get_index(self):
         try:
             return next(self.index)
         except StopIteration:
-            return None
+            self._reset_index()
+            return next(self.index)
+
+    def _reset_index(self):
+        keys = list(self.order.keys())
+        keys.sort()
+        if len(keys)*2 > self.range:
+            self.range = len(keys)*2
+        self.index = iter(range(self.range))
+        order = self.order
+        self.order = dict()
+        self.place = dict()
+        for key in keys:
+            index = next(self.index)
+            self.order[index] = order[key]
+            self.place[order[key]] = index
 
     def remove(self, *sprites):
         """
         Remove sprite(s) from group.
         """
         for sprite in sprites:
-            spriteID = id(sprite)
-            if str(spriteID) in self.place.keys():
-                self.order.pop(self.place[spriteID], None)
-                self.place.pop(spriteID, None)
+            if hasattr(sprite, '_groups'):
+                spriteID = id(sprite)
+                if str(spriteID) in self._sprites.keys():
+                    self._sprites.pop(spriteID, None)
+                    sprite._groups.pop(id(self), None)
+                    self.order.pop(self.place[spriteID], None)
+                    self.place.pop(spriteID, None)
+            else:
+                self.remove(*sprite)
         self.sort = None
-        RenderUpdates.remove(self, *sprites)
         return None
 
     def empty(self):
