@@ -1,5 +1,6 @@
 0.24-dev
 -revise module for transcrypt.
+-revise sprite orderedupdates.
 
 0.24    2021-04-28
 -revise rect move/inflate args processing.
